--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
         <a  href="#Works">Works</a>
         <a  href="#contact">Contact</a>
         <a  href="#about-title">About</a>
+        <a class="resume" href="responsive-grid-main"> Resume</a>
       </div>
     </nav> 
         <!-- parallax test -->
          <div class="parallax-wrapper">
             <div class="content">
-                <h1 class="welcome"><b>Brianna Hickey</b></h1>
+                <h1 style="color: aqua;" class="welcome"><b>Brianna Hickey</b></h1>
             </div>
         </div>
     </div> 
@@ -41,8 +42,8 @@
             <a href="images/mine/background.jpg">
               <img src="images/mine/paintinggrey.jpg">
               <div class="overlay">
-            <h2>Emotion Painting</h2>
-            <p>First of series of large scale paintings depicting various emotions.</p> 
+            <h2 style="color: black;">Emotion Painting</h2>
+            <p style="color: black;">First of series of large scale paintings depicting various emotions.</p> 
           </div>
           </a>
         </div>  
@@ -52,8 +53,8 @@
               <a href="">
                 <img src="images/mine/charcoalgrey.jpg">
                 <div class="overlay">
-            <h2>Charcoal Figure Study</h2>
-            <p>Figure study of a man's back done in 2019. Material: Charcoal on newsprint</p>
+            <h2 style="color: black;">Charcoal Figure Study</h2>
+            <p style="color: black;">Figure study of a man's back done in 2019.</p>
           </div>
           </a>
         </div>  
@@ -63,8 +64,8 @@
               <a href="">
                 <img src="images/mine/Inkdrawngrey.jpg">
                 <div class="overlay">
-            <h2>Fallen Angel</h2>
-            <p>Ink drawing inspired by the old masters of the Rococo style.</p>
+            <h2 style="color: black;">Fallen Angel</h2>
+            <p style="color: black;">Ink drawing inspired by the old masters of the Rococo style.</p>
           </div>
           </a>
         </div> 
@@ -74,8 +75,8 @@
               <a href="">
                 <img src="images/mine/pacagetry.jpg">
                 <div class="overlay">
-            <h2>Festival Package Design</h2>
-            <p>Packaging design for a made-up movie festival for a Graphic Design 2 class </p>
+            <h2 style="color: black;">Festival Package Design</h2>
+            <p style="color: black;">Packaging design for a made-up movie festival for a Graphic Design 2 class </p>
           </div>
           </a>
         </div> 
@@ -85,8 +86,8 @@
             <a href="">
               <img src="images/mine/thisonealltree.jpg">
               <div class="overlay">
-            <h2>Festival Stationary Porducts</h2>
-            <p>Various stationary products with festival Logo and theme on items.</p>
+            <h2 style="color: black;">Festival Stationary Porducts</h2>
+            <p style="color: black;">Various stationary products with festival Logo and theme on items.</p>
           </div>
           </a>
           </div>
@@ -96,8 +97,8 @@
               <a href="">
                 <img src="images/mine/BriannaHickeyHISTORICALfinalposter.svg">
                 <div class="overlay">
-            <h2> Curate a Cure</h2>
-            <p>Historical poster design for Black Out day for a publsihing class. </p>
+            <h2 style="color: black;"> Curate a Cure</h2>
+            <p style="color:black;">Historical poster design for Black Out day for a publsihing class. </p>
           </div>
           </a>
           </div>
