--- a/responsive-grid-main/index.html
+++ b/responsive-grid-main/index.html
@@ -83,7 +83,7 @@ Novice Graphic Design with a fresh look on design. Combining fine art background
                 <h2 style="color: aqua;">Education</h2>
                 <ul>
                 <li><b>University of Massachusetts, Dartmouth, MA</b>- Degree
-                September 2020-still attending</li>
+                September 2020-Present</li>
                 
                 <li><b>Bristol Community College, Fall River, MA</b>- Associates Degree
                 September 2017-2020</li>
@@ -99,9 +99,9 @@ Novice Graphic Design with a fresh look on design. Combining fine art background
             <li>Designed t-shirt for a 5K run <i>2015</i></li>
             <li>Painted mural with group of friends <i>2015</i> </li>
             <li>Sculpture accepted into a juried art show <i>2018 & 2019</i></li>
-            <li>Intern at art gallery<i>2017-2020</i></li>
+            <li>Intern at Grimshaw Gudewicz Art Gallery<i>2017-2020</i></li>
             <li>Poster featured in online art show <i>2020</i></li>
-            <li>Logo designed for a Non-Profit<i>2020</i></li>
+            <li>Logo designed for Diamono Project <i>2020</i></li>
             </ul>
             </section>
             
