--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
          <section class="about-me">
           <div class="about-title"><h1>About</h1>
           </div> 
-          <img width="80" height="100" src="images/mine/selfimagegrey.jpg">
+          <img  src="images/mine/selfimagegrey.jpg">
            <p style="color: rgb(112, 129, 129);">Brianna Hickey is a student currently studying at the University of Massachusetts in Dartmouth. A double major in Graphic Design and Illustration with the desire to learn an array of media.
             A transfer student from Bristol Community College where she expanded her interest from a novice to an aspiring illustrator and graphic designer. Brianna has experience in the graphic design
              world after a life changing internship at the Grimshaw Gudewicz Art Gallery. </p>
@@ -119,7 +119,7 @@
              <section class="contact content regular-wrapper">
                 <div class="contact-title"><h1>Contact</h1>
                 </div>
-                <div class="logo-svg"><img src="logos/logo thingbluefilled.svg" alt=""></div>
+                <div class="logo-svg"><img src="logos/logothingbluefilled.svg" alt=""></div>
                 <div class="contact-wrapper">
                     
                     <p style="color: rgb(112, 129, 129);">Briannahickey913@gmail.com</p>
